
syntax = "proto3";
import "google/protobuf/empty.proto";
package secrets;

message GetSecretGrpcRequest {
  string          secret_id  = 1;
  optional string product_id = 2;
}

message GetTemplatesUsageGrpcRequest {
  string product_id = 1;
  string secret_id  = 2;
}

message GetTemplatesUsageGrpcResponse {
  repeated TemplateUsageGrpcModel templates = 1;
}

message TemplateUsageGrpcModel{
  string product          = 1;
  string template_id      = 2;
  string template_content = 3;
}

message GetSecretsUsageGrpcRequest {
  string          name    = 1;
  optional string product = 2;
}

message GetSecretsUsageGrpcResponse{
  repeated SecretUsageGrpcModel secrets = 1;
}

message SecretUsageGrpcModel {
  string product_id = 1;
  string id         = 2;
  string value      = 3;
}

message SecretGrpcModel{
  string name              = 1;
  int32  level             = 2;
  string created           = 3;
  string updated           = 4;
  int32  used_by_templates = 5;
  int32  used_by_secrets   = 6;
}

message SaveSecretGrpcRequest{
  optional string product_id = 1;
  string          id         = 2;
  string          value      = 3;
  int32           level      = 4;
}

message DeleteSecretGrpcRequest{
  string          secret_id  = 1;
  optional string product_id = 2;
}

message GetAllSecretsGrpcRequest{
  optional string product_id = 1;
}

service Secrets {
  rpc Get(GetSecretGrpcRequest) returns (SecretGrpcModel);
  rpc GetAll(GetAllSecretsGrpcRequest) returns (stream SecretGrpcModel);
  rpc Save(SaveSecretGrpcRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteSecretGrpcRequest) returns (google.protobuf.Empty);

  rpc GetTemplatesUsage(GetTemplatesUsageGrpcRequest) returns (GetTemplatesUsageGrpcResponse);
  rpc GetSecretsUsage(DeleteSecretGrpcRequest) returns (GetSecretsUsageGrpcResponse);
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}